// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with other props 1`] = `
<div>
  <a
    className="twitter-share-button"
    data-hashtags={
      Array [
        "hashtag",
      ]
    }
    data-text="text"
    data-url="url"
    data-via="user"
    href="https://twitter.com/share"
  >
    Tweet
  </a>
</div>
`;

exports[`renders correctly with required props 1`] = `
<div>
  <a
    className="twitter-share-button"
    data-hashtags=""
    data-text=""
    data-via=""
    href="https://twitter.com/share"
  >
    Tweet
  </a>
</div>
`;
